# pomo

./: Cargo.toml
src/: cli.rs  main.rs  sketchybar.rs
